2004-12-08  Christophe Fergeau  <teuf@gnome.org>

	* Makefile.am: don't override CFLAGS, fixes #2033

2004-12-08  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml:
	* freedesktop.org.xml.in: change main mp3 mime type to audio/mpeg,
	add audio/x-mp3 as an alias for this mime type.

2004-12-02  Dan Winship  <danw@novell.com>

	* Makefile.am (CLEANFILES, DISTCLEANFILES): Fix. intltool stuff
	shouldn't be in CLEANFILES, or "make clean; make" will fail
	(#1845)

2004-12-02  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml:
	* freedesktop.org.xml.in: mark glade files as inheriting from 
	text/xml, not text/plain

2004-11-28  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml: sync'ed file with freedesktop.org.xml.in
	* freedesktop.org.xml.in: fixed entry for jnlp files

2004-11-26  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added application/x-java-jnlp-file, fixes 
	#1118

2004-11-26  Christophe Fergeau  <teuf@gnome.org>

	* update-mime-database.c: (parse_int_value), (match_offset): use 
	strtoul when reading an unsigned long, not strtol, fixes #1506

2004-11-26  Christophe Fergeau  <teuf@gnome.org>

	* update-mime-database.c: (parse_int_value): take value endianness
	into account when reading the "mask" tag, fixes #1507.

Tue Nov  9 01:52:52 2004  Jonathan Blandford  <jrb@redhat.com>

	* update-mime-database.c: Patch from Matthias Clasen to generate
	subclass and alias files.

	* shared-mime-info-spec.xml.in: update the spec to mention the
	subclasses and aliases files.

2004-11-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml:
	* freedesktop.org.xml.in: add magic for the audio/x-mpegurl mime-type

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml:
	* freedesktop.org.xml.in: sync freedesktop.org.xml with
	freedesktop.org.xml.in, fix freedesktop.org.xml.in to make it valid
	XML

2004-11-01  Christophe Fergeau  <teuf@gnome.org>
