@@ -3,11 +3,11 @@
   <!ELEMENT mime-info (mime-type)+>
   <!ATTLIST mime-info xmlns CDATA #FIXED "http://www.freedesktop.org/standards/shared-mime-info">
 
-  <!ELEMENT mime-type (comment|glob|magic|root-XML|alias|sub-class-of)*>
+  <!ELEMENT mime-type (_comment|glob|magic|root-XML|alias|sub-class-of)*>
   <!ATTLIST mime-type type CDATA #REQUIRED>
 
-  <!ELEMENT comment (#PCDATA)>
-  <!ATTLIST comment xml:lang CDATA #IMPLIED>
+  <!ELEMENT _comment (#PCDATA)>
+  <!ATTLIST _comment xml:lang CDATA #IMPLIED>
 
   <!ELEMENT glob EMPTY>
   <!ATTLIST glob pattern CDATA #REQUIRED>
@@ -6752,7 +6752,7 @@
     <magic priority="50">
       <match value="0xfffb" type="big32" offset="0"/>
       <match value="ID3" type="string" offset="0"/>
-      <match value="0xfff0" type="big16" offset="0" mask="0xfff0"/>
+
     </magic>
     <glob pattern="*.mp3"/>
   </mime-type>
