@@ -1443,6 +1443,7 @@ command to generate the output files.
     <root-XML namespaceURI='http://www.w3.org/1999/xhtml' localName='html'/>
   </mime-type>
   <mime-type type="application/zip">
+    <alias type="application/x-zip-compressed"/>
     <_comment>ZIP archive</_comment>
     <magic priority="40">
       <match type="string" value="PK\003\004" offset="0"/>
@@ -1543,7 +1544,7 @@ command to generate the output files.
     <magic priority="50">
       <match type="big32" value="0xfffb" offset="0"/>
       <match type="string" value="ID3" offset="0"/>
-      <match type="big16" mask="0xfff0" value="0xfff0" offset="0"/>
+<!--      <match type="big16" mask="0xfff0" value="0xfff0" offset="0"/> -->
     </magic>
     <glob pattern="*.mp3"/>
   </mime-type>
